# Maths

./: .gitignore  CMakeLists.txt  LIcense  README.md
src/: Maths.cpp  Maths.h  Matrix.h  Type.h  Vector.cpp  Vector.h
tests/: Source.cpp  Vector.cpp
